debugging course info cell

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7ff8c9c63b50>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7f8d8b1b7b50>}"
       ]
      },
      "execution_count": 5,
@@ -514,177 +514,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>course_id</th>\n",
-       "      <th>course_code</th>\n",
-       "      <th>course_name</th>\n",
-       "      <th>account_id</th>\n",
-       "      <th>created_at</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>welcome-to-canvas</td>\n",
-       "      <td>Welcome to Canvas</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016-01-07T16:30:12Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>16</td>\n",
-       "      <td>GSL</td>\n",
-       "      <td>GSL Canvas Pilot</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2016-10-03T14:39:27Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17</td>\n",
-       "      <td>21G.067/21G.597</td>\n",
-       "      <td>Digital Media in Japan and Korea</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2016-10-03T19:42:20Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18</td>\n",
-       "      <td>21G.614</td>\n",
-       "      <td>Russian IV</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2016-10-11T13:39:46Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20</td>\n",
-       "      <td>21G.501</td>\n",
-       "      <td>Japanese I (Section 1)</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2016-10-11T13:55:59Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15606</th>\n",
-       "      <td>17692</td>\n",
-       "      <td>21H.URW</td>\n",
-       "      <td>21H.URW Undergrad Research Wellesley</td>\n",
-       "      <td>114</td>\n",
-       "      <td>2022-09-10T12:33:21Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15607</th>\n",
-       "      <td>17693</td>\n",
-       "      <td>4.288 L01</td>\n",
-       "      <td>4.288 Prep-SMArchS Thesis, Lecture 1</td>\n",
-       "      <td>88</td>\n",
-       "      <td>2022-09-10T12:33:23Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15608</th>\n",
-       "      <td>17694</td>\n",
-       "      <td>4.288 L02</td>\n",
-       "      <td>4.288 Prep-SMArchS Thesis, Lecture 2</td>\n",
-       "      <td>88</td>\n",
-       "      <td>2022-09-10T12:33:23Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15609</th>\n",
-       "      <td>17695</td>\n",
-       "      <td>4.341 L02</td>\n",
-       "      <td>4.341 Intro to Photo &amp; Related Media, Lecture 2</td>\n",
-       "      <td>88</td>\n",
-       "      <td>2022-09-10T12:33:23Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15610</th>\n",
-       "      <td>17696</td>\n",
-       "      <td>4.341 L01</td>\n",
-       "      <td>4.341 Intro to Photo &amp; Related Media, Lecture 1</td>\n",
-       "      <td>88</td>\n",
-       "      <td>2022-09-10T12:33:24Z</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>15611 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       course_id        course_code  \\\n",
-       "0              1  welcome-to-canvas   \n",
-       "1             16                GSL   \n",
-       "2             17    21G.067/21G.597   \n",
-       "3             18            21G.614   \n",
-       "4             20            21G.501   \n",
-       "...          ...                ...   \n",
-       "15606      17692            21H.URW   \n",
-       "15607      17693          4.288 L01   \n",
-       "15608      17694          4.288 L02   \n",
-       "15609      17695          4.341 L02   \n",
-       "15610      17696          4.341 L01   \n",
-       "\n",
-       "                                           course_name  account_id  \\\n",
-       "0                                    Welcome to Canvas           1   \n",
-       "1                                     GSL Canvas Pilot          15   \n",
-       "2                    Digital Media in Japan and Korea           11   \n",
-       "3                                           Russian IV          14   \n",
-       "4                               Japanese I (Section 1)          11   \n",
-       "...                                                ...         ...   \n",
-       "15606             21H.URW Undergrad Research Wellesley         114   \n",
-       "15607             4.288 Prep-SMArchS Thesis, Lecture 1          88   \n",
-       "15608             4.288 Prep-SMArchS Thesis, Lecture 2          88   \n",
-       "15609  4.341 Intro to Photo & Related Media, Lecture 2          88   \n",
-       "15610  4.341 Intro to Photo & Related Media, Lecture 1          88   \n",
-       "\n",
-       "                 created_at  \n",
-       "0      2016-01-07T16:30:12Z  \n",
-       "1      2016-10-03T14:39:27Z  \n",
-       "2      2016-10-03T19:42:20Z  \n",
-       "3      2016-10-11T13:39:46Z  \n",
-       "4      2016-10-11T13:55:59Z  \n",
-       "...                     ...  \n",
-       "15606  2022-09-10T12:33:21Z  \n",
-       "15607  2022-09-10T12:33:23Z  \n",
-       "15608  2022-09-10T12:33:23Z  \n",
-       "15609  2022-09-10T12:33:23Z  \n",
-       "15610  2022-09-10T12:33:24Z  \n",
-       "\n",
-       "[15611 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting a list of all courses...\n",
+      "Getting a list of all courses... Done.\n"
+     ]
     }
    ],
    "source": [
     "#Get a list of all courses:\n",
+    "print(\"Getting a list of all courses...\")\n",
     "large_num = 100000 #give a very large number so all courses are pulled recursively\n",
     "#excl_acc = [1,17,76] #mention sub-accounts to be excluded\n",
     "excl_acc = [] #Don't implement it here...\n",
@@ -710,14 +550,24 @@
     "filtered_courses_df = courses_df_dep_excluded[courses_df_dep_excluded.created_at>=begin_date]\n",
     "\n",
     "filtered_courses_df.to_csv('all_canvas_since_{}.csv'.format(begin_date), index=None)\n",
-    "filtered_courses_df"
+    "filtered_courses_df\n",
+    "print(\"Getting a list of all courses... Done.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting course info for each course...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -738,239 +588,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 27)\n"
+      "5 more courses done. Ending course_id 20\n",
+      "(5, 27)\n",
+      "Getting course info for each course... Done.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>course_id</th>\n",
-       "      <th>course_sis_id</th>\n",
-       "      <th>Dept</th>\n",
-       "      <th>enrollment_term</th>\n",
-       "      <th>parent_account</th>\n",
-       "      <th>Course_name</th>\n",
-       "      <th>course_state</th>\n",
-       "      <th>num_files</th>\n",
-       "      <th>num_assignments</th>\n",
-       "      <th>num_tot_fa</th>\n",
-       "      <th>...</th>\n",
-       "      <th>course_visibility</th>\n",
-       "      <th>num_published_dis_topics</th>\n",
-       "      <th>num_published_pages</th>\n",
-       "      <th>num_published_quizzes</th>\n",
-       "      <th>num_assignment_groups</th>\n",
-       "      <th>num_modules</th>\n",
-       "      <th>num_module_items</th>\n",
-       "      <th>farthest_quiz_due_lock_date</th>\n",
-       "      <th>if_LT_led</th>\n",
-       "      <th>LT_email</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>welcome-to-canvas</td>\n",
-       "      <td>MIT Root Account</td>\n",
-       "      <td>Default Term</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Welcome to Canvas</td>\n",
-       "      <td>unpublished</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>28</td>\n",
-       "      <td>...</td>\n",
-       "      <td>public</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>16</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Manually-Created Courses</td>\n",
-       "      <td>Default Term</td>\n",
-       "      <td>MIT Root Account</td>\n",
-       "      <td>GSL Canvas Pilot</td>\n",
-       "      <td>available</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>not_public_to_auth_users</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2016-10-08 03:59:00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17</td>\n",
-       "      <td>21G.067/21G.597.2017SP</td>\n",
-       "      <td>Japanese</td>\n",
-       "      <td>Spring 2017</td>\n",
-       "      <td>Global Studies and Languages</td>\n",
-       "      <td>Digital Media in Japan and Korea</td>\n",
-       "      <td>available</td>\n",
-       "      <td>52</td>\n",
-       "      <td>9</td>\n",
-       "      <td>75</td>\n",
-       "      <td>...</td>\n",
-       "      <td>not_public_to_auth_users</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>64</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18</td>\n",
-       "      <td>21G.614.2017SP</td>\n",
-       "      <td>Russian</td>\n",
-       "      <td>Spring 2017</td>\n",
-       "      <td>Global Studies and Languages</td>\n",
-       "      <td>Russian IV</td>\n",
-       "      <td>available</td>\n",
-       "      <td>93</td>\n",
-       "      <td>44</td>\n",
-       "      <td>146</td>\n",
-       "      <td>...</td>\n",
-       "      <td>not_public_to_auth_users</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>53</td>\n",
-       "      <td>2017-03-03 06:59:59</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Japanese</td>\n",
-       "      <td>IAP 2017</td>\n",
-       "      <td>Global Studies and Languages</td>\n",
-       "      <td>Japanese I (Section 1)</td>\n",
-       "      <td>available</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>11</td>\n",
-       "      <td>...</td>\n",
-       "      <td>institute</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   course_id           course_sis_id                      Dept  \\\n",
-       "0          1       welcome-to-canvas          MIT Root Account   \n",
-       "1         16                    None  Manually-Created Courses   \n",
-       "2         17  21G.067/21G.597.2017SP                  Japanese   \n",
-       "3         18          21G.614.2017SP                   Russian   \n",
-       "4         20                    None                  Japanese   \n",
-       "\n",
-       "  enrollment_term                parent_account  \\\n",
-       "0    Default Term                          None   \n",
-       "1    Default Term              MIT Root Account   \n",
-       "2     Spring 2017  Global Studies and Languages   \n",
-       "3     Spring 2017  Global Studies and Languages   \n",
-       "4        IAP 2017  Global Studies and Languages   \n",
-       "\n",
-       "                         Course_name course_state  num_files  num_assignments  \\\n",
-       "0                  Welcome to Canvas  unpublished          3               20   \n",
-       "1                   GSL Canvas Pilot    available          0                1   \n",
-       "2  Digital Media in Japan and Korea     available         52                9   \n",
-       "3                         Russian IV    available         93               44   \n",
-       "4             Japanese I (Section 1)    available          2                6   \n",
-       "\n",
-       "   num_tot_fa  ...         course_visibility num_published_dis_topics  \\\n",
-       "0          28  ...                    public                        4   \n",
-       "1           2  ...  not_public_to_auth_users                        1   \n",
-       "2          75  ...  not_public_to_auth_users                       12   \n",
-       "3         146  ...  not_public_to_auth_users                        0   \n",
-       "4          11  ...                 institute                        0   \n",
-       "\n",
-       "   num_published_pages  num_published_quizzes  num_assignment_groups  \\\n",
-       "0                    5                      3                      1   \n",
-       "1                    0                      1                      1   \n",
-       "2                    2                      0                      1   \n",
-       "3                    8                     15                      1   \n",
-       "4                    3                      0                      1   \n",
-       "\n",
-       "   num_modules  num_module_items farthest_quiz_due_lock_date  if_LT_led  \\\n",
-       "0            6                38                         NaT          0   \n",
-       "1            0                 0         2016-10-08 03:59:00          0   \n",
-       "2           14                64                         NaT          0   \n",
-       "3            6                53         2017-03-03 06:59:59          0   \n",
-       "4            9                 0                         NaT          0   \n",
-       "\n",
-       "   LT_email  \n",
-       "0       NaN  \n",
-       "1       NaN  \n",
-       "2       NaN  \n",
-       "3       NaN  \n",
-       "4       NaN  \n",
-       "\n",
-       "[5 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Check that the migration/production/dev is set correctly\n",
+    "print(\"Getting course info for each course...\")\n",
     "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
     "all_course_list_0_rows = []\n",
     "all_course_list_0_cols = ['course_id', 'course_sis_id', 'Dept', 'enrollment_term','parent_account', 'Course_name', \n",
@@ -986,12 +612,16 @@
     "    \n",
     "for c_id in all_course_list_0[:num_courses]:\n",
     "    all_course_list_0_rows.append(get_course_info(c_id))\n",
+    "    #debug line\n",
+    "    if len(all_course_list_0_rows)%5==0:\n",
+    "        print(\"5 more courses done. Ending course_id {}\".format(c_id))\n",
     "    \n",
     "all_course_list_0_df = pd.DataFrame.from_records(all_course_list_0_rows, columns=all_course_list_0_cols)\n",
     "all_course_list_0_df['if_LT_led'] = 0\n",
     "all_course_list_0_df['LT_email'] = np.nan\n",
     "print(all_course_list_0_df.shape)\n",
-    "all_course_list_0_df.tail()\n"
+    "all_course_list_0_df.tail()\n",
+    "print(\"Getting course info for each course... Done.\")"
    ]
   },
   {
