--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -615,6 +615,8 @@
     "    #debug line\n",
     "    if len(all_course_list_0_rows)%5==0:\n",
     "        print(\"5 more courses done. Ending course_id {}\".format(c_id))\n",
+    "        with open(\"out\", \"a+\") as file_:\n",
+    "            file_.write(\"5 more courses done. Ending course_id {}\".format(c_id))\n",
     "    \n",
     "all_course_list_0_df = pd.DataFrame.from_records(all_course_list_0_rows, columns=all_course_list_0_cols)\n",
     "all_course_list_0_df['if_LT_led'] = 0\n",
