separated tab info collection; dumped in batches

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7f8d8b1b7b50>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fd9e949fa60>}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,19 +145,6 @@
     "lt_df = lt_df[lt_existing_cols]\n",
     "lt_df.columns = lt_df_new_cols\n",
     "lt_df['Email'] = lt_df.Email.str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Define parameters etc. for course tab table\n",
-    "#The tab information for each course will be obtained along with the course information\n",
-    "#They will be appended in a list\n",
-    "#The list will be turned to a dataframe and sent to GBQ\n",
-    "tab_dict_list = []"
    ]
   },
   {
@@ -193,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,21 +440,7 @@
     "        q_max = q_times.max() if len(q_times)>0 else None\n",
     "    except:\n",
     "        q_max = None\n",
-    "        \n",
-    "    try:    \n",
-    "        #Get all tabs for this course\n",
-    "        all_tabs = c1.get_tabs()\n",
     "\n",
-    "        #Append the list of tabs to all_tabs_list\n",
-    "        for tab_ in all_tabs:\n",
-    "            tab_dict = tab_.__dict__\n",
-    "            tab_dict['course_name'] = c1.name\n",
-    "            \n",
-    "            #print(tab_dict)\n",
-    "            tab_dict_list.append(tab_dict)\n",
-    "\n",
-    "    except:\n",
-    "        pass\n",
     "  \n",
     "    return [course_id, course_sis_id, course_dept, enrollment_term, parent_account, course_name, course_state,\n",
     "            len(file_utimes_all), len(assn_utimes_all), len(fa_times_all), \n",
@@ -479,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -549,14 +522,13 @@
     "'''\n",
     "filtered_courses_df = courses_df_dep_excluded[courses_df_dep_excluded.created_at>=begin_date]\n",
     "\n",
-    "filtered_courses_df.to_csv('all_canvas_since_{}.csv'.format(begin_date), index=None)\n",
-    "filtered_courses_df\n",
+    "filtered_courses_df.to_csv('all_canvas_courses.csv', index=None)\n",
     "print(\"Getting a list of all courses... Done.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -572,15 +544,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-70409fe6decc>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -597,6 +569,7 @@
    "source": [
     "#Check that the migration/production/dev is set correctly\n",
     "print(\"Getting course info for each course...\")\n",
+    "filtered_courses_df = pd.read_csv('all_canvas_courses.csv')\n",
     "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
     "all_course_list_0_rows = []\n",
     "all_course_list_0_cols = ['course_id', 'course_sis_id', 'Dept', 'enrollment_term','parent_account', 'Course_name', \n",
@@ -628,22 +601,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-70409fe6decc>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-9-70409fe6decc>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-26-bdd3ed737885>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -693,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,9 +719,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:05,  5.08s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "#Exclude the last day's information as that's still incomplete.\n",
     "all_courses_df['first_created_at'] = pd.to_datetime(all_courses_df['first_created_at'])\n",
@@ -760,13 +741,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_course_tab_info(course_id):\n",
+    "    '''This function gets the course information and the file/assignment update times,\n",
+    "    by the course_id, and returns a list of '''\n",
+    "    cutoff_date = datetime.strptime('2015-05-31', '%Y-%m-%d') #by this time most default content was created\n",
+    "    tab_dict_course = []\n",
+    "    try:\n",
+    "        c1 = canvas.get_course(course_id)\n",
+    "    except:\n",
+    "        c1 = None    \n",
+    "    try:    \n",
+    "        #Get all tabs for this course\n",
+    "        all_tabs = c1.get_tabs()\n",
+    "\n",
+    "        #Append the list of tabs to all_tabs_list\n",
+    "        for tab_ in all_tabs:\n",
+    "            tab_dict = tab_.__dict__\n",
+    "            tab_dict['course_name'] = c1.name\n",
+    "\n",
+    "            tab_dict_course.append(tab_dict)\n",
+    "\n",
+    "        return tab_dict_course\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#get the course tab info for a set number of courses at a time\n",
+    "filtered_courses_df = pd.read_csv('all_canvas_courses.csv')\n",
+    "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
+    "\n",
+    "\n",
+    "if run_mode == 'dev' or run_mode=='mig':\n",
+    "    course_pos_list = all_course_list_0[:5]\n",
+    "    num_courses_dump = 3\n",
+    "elif run_mode == 'prod' or run_mode=='prod_home':\n",
+    "    course_pos_list = all_course_list_0\n",
+    "    num_courses_dump = 100\n",
+    "    \n",
+    "course_max_num = len(course_pos_list)\n",
+    "tab_dict_list = []\n",
+    "\n",
+    "dump_num = 0\n",
+    "i = 0\n",
+    "while i < course_max_num:\n",
+    "    cid = course_pos_list[i]\n",
+    "    tab_dict_course = get_course_tab_info(cid)\n",
+    "    for item in tab_dict_course:\n",
+    "        tab_dict_list.append(item)\n",
+    "\n",
+    "\n",
+    "    if  i%num_courses_dump == 0:\n",
+    "        course_tab_df = pd.DataFrame(tab_dict_list)\n",
+    "        course_tab_df.drop(['_requester'], axis=1, inplace=True)\n",
+    "        if dump_num==0: \n",
+    "            course_tab_df.to_csv('course_tab_df.csv', index=None)\n",
+    "\n",
+    "        else: \n",
+    "            course_tab_df.to_csv('course_tab_df.csv', index=None, header=None, mode='a')\n",
+    "\n",
+    "        dump_num += 1 #increment the dump number\n",
+    "        tab_dict_list = [] #start a new tab_dict_list\n",
+    "        \n",
+    "    i += 1 #move course position in the course list        \n",
+    "\n",
+    "#finally, once out of the loop, check if the tab_dict_list is empty, and dump it if not.\n",
+    "if len(tab_dict_list) != 0:\n",
+    "        course_tab_df = pd.DataFrame(tab_dict_list)\n",
+    "        course_tab_df.drop(['_requester'], axis=1, inplace=True)\n",
+    "        if dump_num==0: \n",
+    "            course_tab_df.to_csv('course_tab_df.csv', index=None)\n",
+    "        else: \n",
+    "            course_tab_df.to_csv('course_tab_df.csv', index=None, header=None, mode='a')\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:04,  4.38s/it]\n"
+     ]
+    }
+   ],
+   "source": [
     "#Create course tab dataframe from the list:\n",
-    "course_tab_df = pd.DataFrame(tab_dict_list)\n",
-    "course_tab_df.drop(['_requester'], axis=1, inplace=True)\n",
+    "course_tab_df = pd.read_csv('course_tab_df.csv')\n",
+    "\n",
     "#Send out course tabs dataframe to GBQ\n",
     "course_tab_df.to_gbq('lt_courses.{}'.format(tab_out_table), project_id, if_exists='replace', credentials=credentials)"
    ]
