fixed wrong column organization issue

--- a/canvas_courses_course_tabs.ipynb
+++ b/canvas_courses_course_tabs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fd9e949fa60>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fdf105b6a30>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -257,6 +257,15 @@
     "\n",
     "dump_num = 0\n",
     "i = 0\n",
+    "\n",
+    "#create the header list:\n",
+    "with open (\"course_tab_df.csv\",'w') as file_:\n",
+    "    file_.write(\"id,html_url,full_url,position,visibility,label,type,\\\n",
+    "course_id,course_name,unused,hidden,url\\n\")\n",
+    "    \n",
+    "course_tab_cols = ['id', 'html_url', 'full_url', 'position', 'visibility', 'label', 'type',\n",
+    "       'course_id', 'course_name', 'unused', 'hidden', 'url']\n",
+    "\n",
     "while i < course_max_num:\n",
     "    cid = course_pos_list[i]\n",
     "    tab_dict_course = get_course_tab_info(cid)\n",
@@ -267,11 +276,9 @@
     "    if  i%num_courses_dump == 0:\n",
     "        course_tab_df = pd.DataFrame(tab_dict_list)\n",
     "        course_tab_df.drop(['_requester'], axis=1, inplace=True)\n",
-    "        if dump_num==0: \n",
-    "            course_tab_df.to_csv('course_tab_df.csv', index=None)\n",
     "\n",
-    "        else: \n",
-    "            course_tab_df.to_csv('course_tab_df.csv', index=None, header=None, mode='a')\n",
+    "        course_tab_df_ = course_tab_df[course_tab_cols]\n",
+    "        course_tab_df_.to_csv('course_tab_df.csv', header=None, index=None, mode='a')\n",
     "\n",
     "        dump_num += 1 #increment the dump number\n",
     "        tab_dict_list = [] #start a new tab_dict_list\n",
@@ -282,10 +289,8 @@
     "if len(tab_dict_list) != 0:\n",
     "        course_tab_df = pd.DataFrame(tab_dict_list)\n",
     "        course_tab_df.drop(['_requester'], axis=1, inplace=True)\n",
-    "        if dump_num==0: \n",
-    "            course_tab_df.to_csv('course_tab_df.csv', index=None)\n",
-    "        else: \n",
-    "            course_tab_df.to_csv('course_tab_df.csv', index=None, header=None, mode='a')\n",
+    "        course_tab_df_ = course_tab_df[course_tab_cols]        \n",
+    "        course_tab_df_.to_csv('course_tab_df.csv', index=None, header=None, mode='a')\n",
     "\n",
     "        \n",
     "        \n",
@@ -294,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:04,  4.38s/it]\n"
+      "1it [00:05,  5.60s/it]\n"
      ]
     }
    ],
