Adding logic around Nonetype not iterable error

--- a/canvas_courses_course_tabs.ipynb
+++ b/canvas_courses_course_tabs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fdf105b6a30>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fca305d8df0>}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -269,9 +269,12 @@
     "while i < course_max_num:\n",
     "    cid = course_pos_list[i]\n",
     "    tab_dict_course = get_course_tab_info(cid)\n",
-    "    for item in tab_dict_course:\n",
-    "        tab_dict_list.append(item)\n",
     "\n",
+    "    if tab_dict_course != None:\n",
+    "        for item in tab_dict_course:\n",
+    "            tab_dict_list.append(item)\n",
+    "\n",
+    "    i += 1 #move course position in the course list        \n",
     "\n",
     "    if  i%num_courses_dump == 0:\n",
     "        course_tab_df = pd.DataFrame(tab_dict_list)\n",
@@ -283,7 +286,6 @@
     "        dump_num += 1 #increment the dump number\n",
     "        tab_dict_list = [] #start a new tab_dict_list\n",
     "        \n",
-    "    i += 1 #move course position in the course list        \n",
     "\n",
     "#finally, once out of the loop, check if the tab_dict_list is empty, and dump it if not.\n",
     "if len(tab_dict_list) != 0:\n",
