--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fd9e949fa60>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7feef9a70df0>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,6 +236,14 @@
     "\n",
     "    except:\n",
     "        num_students = None\n",
+    "        \n",
+    "\n",
+    "    #find out the default_view of the course:\n",
+    "    try:\n",
+    "        default_view = c1.default_view\n",
+    "\n",
+    "    except:\n",
+    "        default_view = None    \n",
     "        \n",
     "        \n",
     "    #Find out if the course is public or not:\n",
@@ -444,7 +452,7 @@
     "  \n",
     "    return [course_id, course_sis_id, course_dept, enrollment_term, parent_account, course_name, course_state,\n",
     "            len(file_utimes_all), len(assn_utimes_all), len(fa_times_all), \n",
-    "            fa_max, fa_c_min, num_students, is_public, public_syllabus,\n",
+    "            fa_max, fa_c_min, num_students, default_view, is_public, public_syllabus, \n",
     "           public_syllabus_to_auth, is_public_to_auth_users, course_visibility, num_published_dis_topics,\n",
     "            num_published_pages, num_published_quizzes, num_assignment_groups,num_modules, num_module_items, q_max]\n",
     "\n"
@@ -452,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -544,15 +552,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-26-bdd3ed737885>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -561,7 +569,7 @@
      "output_type": "stream",
      "text": [
       "5 more courses done. Ending course_id 20\n",
-      "(5, 27)\n",
+      "(5, 28)\n",
       "Getting course info for each course... Done.\n"
      ]
     }
@@ -574,9 +582,9 @@
     "all_course_list_0_rows = []\n",
     "all_course_list_0_cols = ['course_id', 'course_sis_id', 'Dept', 'enrollment_term','parent_account', 'Course_name', \n",
     "    'course_state', 'num_files','num_assignments','num_tot_fa','last_update_at','first_created_at', 'num_students',\n",
-    "            'is_public', 'public_syllabus', 'public_syllabus_to_auth', 'is_public_to_auth_users', 'course_visibility',\n",
-    "            'num_published_dis_topics','num_published_pages', 'num_published_quizzes', 'num_assignment_groups',\n",
-    "                          'num_modules', 'num_module_items','farthest_quiz_due_lock_date']\n",
+    "            'default_view','is_public', 'public_syllabus', 'public_syllabus_to_auth', 'is_public_to_auth_users',\n",
+    "            'course_visibility','num_published_dis_topics','num_published_pages', 'num_published_quizzes', \n",
+    "            'num_assignment_groups','num_modules', 'num_module_items','farthest_quiz_due_lock_date']\n",
     "\n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
     "    num_courses = 5\n",
@@ -601,22 +609,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-26-bdd3ed737885>:232: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:233: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:235: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:236: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-26-bdd3ed737885>:251: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-23-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -624,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13, 27)\n"
+      "(13, 28)\n"
      ]
     }
    ],
@@ -666,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,14 +727,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:05,  5.08s/it]\n"
+      "1it [00:04,  4.56s/it]\n"
      ]
     }
    ],
